--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
 	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description" content="Find your Github doing a fast search." />
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&family=Raleway&display=swap"
+		rel="stylesheet">
 	<title>Find Your Github</title>
 </head>
 
